--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -16,7 +17,7 @@
         <div class="styleContainer">
             <div class="imagebar">
 
-                <img src="./modals/backgrounds/red50.png" alt="" class="backgrounds">
+                <img src="./modals/backgrounds/blue50.png" alt="" class="backgrounds">
 
                 <img src="./modals/ears/default.png" alt="" class="ears">
                 <img src="./modals/neck/default.png" alt="" class="neck">
@@ -62,9 +63,9 @@
                 </div>
             </div>
         </div>
-        <div>
+        <div class="randdown">
             <button class="rand">Random</button>
-         
+            <button class="download">Download</button>
         </div>
     </div>
 
